force-app/main/default/objects/Visa_Inquiry__c/Visa_Inquiry__c.object-meta.xml
<CustomObject>
    <label>Visa Inquiry</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visa Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>