force-app/main/default/objects/Visa_Inquiry__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Visa Inquiries</relationshipLabel>
    <relationshipName>Visa_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>