force-app/main/default/objects/Visa_Inquiry__c/fields/Sales_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visa_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>