force-app/main/default/objects/Visa_Inquiry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Sales_Team_Member__c</columns>
    <columns>Stage__c</columns>
    <columns>Visa_Purpose__c</columns>
    <columns>Visa_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>